src/objects/CH_Workgroup_Filter__c.object
<CustomObject>
    <fields>
        <fullName>CH_Country__c</fullName>
        <label>Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_LevelOfSupport__c</fullName>
        <label>Level Of Support</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_Level_Of_Support</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Outage__c</fullName>
        <label>Outage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                    <isActive>false</isActive>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_ProductModule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Module</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.CH_Valid__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Portfolio_Classification__c</field>
                <operation>equals</operation>
                <value>Product Modules</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Workgroup Filters (Product Module)</relationshipLabel>
        <relationshipName>Workgroup_Filters1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_ProductVariant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Variant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.CH_Valid__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Portfolio_Classification__c</field>
                <operation>equals</operation>
                <value>Complementary Product</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Additional_Classification__c</field>
                <operation>equals</operation>
                <value>Product Variant</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Workgroup Filters (Product Variant)</relationshipLabel>
        <relationshipName>Workgroup_Filters2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Region__c</fullName>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Severity__c</fullName>
        <label>Severity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_Severity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.CH_Valid__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Portfolio_Classification__c</field>
                <operation>equals</operation>
                <value>Solution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Workgroup Filters</relationshipLabel>
        <relationshipName>Workgroup_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Workgroup_Schedule__c</fullName>
        <label>Workgroup Schedule</label>
        <referenceTo>CH_Workgroup_Schedule__c</referenceTo>
        <relationshipLabel>Workgroup Filters</relationshipLabel>
        <relationshipName>CH_Workgroup_Filters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CH_Workgroup_Type__c</fullName>
        <label>Workgroup Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_Workgroup_Type</valueSetName>
        </valueSet>
    </fields>
    <label>Workgroup Filter</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Workgroup Filters Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workgroup Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CH_Check_Max_Filters</fullName>
        <active>true</active>
        <description>Only one filter is allowed per schedule. But you must be able to update the schedule</description>
        <errorConditionFormula>CH_Workgroup_Schedule__r.CH_Workgroup_Filters_Count__c  &gt; 0  &amp;&amp;  PRIORVALUE(Id) = null</errorConditionFormula>
        <errorMessage>Only one filter can be created</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CH_WorkGroupSchedule_Single_region</fullName>
        <active>true</active>
        <errorConditionFormula>IF(INCLUDES(CH_Region__c, &quot;Market Asian and Japan&quot;),1,0) + 
IF(INCLUDES( CH_Region__c, &quot;Market Europe&quot;),1,0) + 
IF(INCLUDES( CH_Region__c, &quot;Market Greater China&quot;),1,0) + 
IF(INCLUDES( CH_Region__c, &quot;Market India&quot;),1,0) + 
IF(INCLUDES( CH_Region__c, &quot;Market Middle East &amp; Africa&quot;),1,0) + 
IF(INCLUDES( CH_Region__c, &quot;Market North America&quot;),1,0) + 
IF(INCLUDES( CH_Region__c, &quot;NNO Others&quot;),1,0) + 
IF(INCLUDES( CH_Region__c, &quot;Market Latin America&quot;),1,0) &gt; 1</errorConditionFormula>
        <errorDisplayField>CH_Region__c</errorDisplayField>
        <errorMessage>The selection of several Regions in the field “Region” isn’t allowed. Please select a single Region or none.</errorMessage>
    </validationRules>
</CustomObject>