src/objects/CH_Workgroup_Filter__c/validationRules/CH_Check_Max_Filters.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_Check_Max_Filters</fullName>
    <active>true</active>
    <description>Only one filter is allowed per schedule. But you must be able to update the schedule</description>
    <errorConditionFormula>CH_Workgroup_Schedule__r.CH_Workgroup_Filters_Count__c  &gt; 0  &amp;&amp;  PRIORVALUE(Id) = null</errorConditionFormula>
    <errorMessage>Only one filter can be created</errorMessage>
</ValidationRule>