src/objects/CH_Workgroup_Filter__c/validationRules/CH_WorkGroupSchedule_Single_region.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_WorkGroupSchedule_Single_region</fullName>
    <active>true</active>
    <errorConditionFormula>IF(INCLUDES(CH_Region__c, &quot;Market Asian and Japan&quot;),1,0) + 
IF(INCLUDES( CH_Region__c, &quot;Market Europe&quot;),1,0) + 
IF(INCLUDES( CH_Region__c, &quot;Market Greater China&quot;),1,0) + 
IF(INCLUDES( CH_Region__c, &quot;Market India&quot;),1,0) + 
IF(INCLUDES( CH_Region__c, &quot;Market Middle East &amp; Africa&quot;),1,0) + 
IF(INCLUDES( CH_Region__c, &quot;Market North America&quot;),1,0) + 
IF(INCLUDES( CH_Region__c, &quot;NNO Others&quot;),1,0) + 
IF(INCLUDES( CH_Region__c, &quot;Market Latin America&quot;),1,0) &gt; 1</errorConditionFormula>
    <errorDisplayField>CH_Region__c</errorDisplayField>
    <errorMessage>The selection of several Regions in the field “Region” isn’t allowed. Please select a single Region or none.</errorMessage>
</ValidationRule>